--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,6 @@
             <artifactId>hsqldb</artifactId>
             <version>2.3.4</version>
         </dependency>
+        <!-- dbunit https://github.com/szaqal/DemoDbUnit -->
     </dependencies>
 </project>
